[project]
name = "mt5-oanda"
version = "0.1.0"
description = "OANDA 証券の複数口座へ MetaTrader 5 経由でアクセスするツール群"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "MetaTrader5>=5.0.45",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
